--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -10,3 +10,9 @@ config = "0.15.13"
 secrecy = "0.10.3"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.46.1", features = ["full"] }
+tracing = { version = "0.1.41", features = ["log"] }
+tracing-actix-web = "0.7.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+
+[dev-dependencies]
+reqwest = "0.12.22"
