--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,6 +16,7 @@ tracing-bunyan-formatter = "0.3.10"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 serde_json = "1.0.140"
 jsonwebtoken = "9.3.1"
+futures-util = "0.3.31"
 
 [dev-dependencies]
 once_cell = "1.21.3"
